--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html lang="en">
-
-<!-- dont put css styles in elements, it makes it harder to manage and modify css -->
-<!-- seriously, its a pain in the ass -->
-
 <head>
     <!--why is there a opening head tag nesting in a head?-->
     <!--<head>-->
@@ -28,7 +24,7 @@
     <meta property="og:title" content="Val's Hut">
     <meta property="og:description" content="Val's Hut">
     <meta property="og:url" content="https://valengo137.github.io/valengo137/">
-    <meta property="og:site_name" content="The Science Times">
+    <meta property="og:site_name" content="Val's Hut">
     <meta property="og:image" content="https://valengo137.github.io/valengo137/photos/logo.svg">
     <meta property="og:image:alt" content="Val's Hut, since 2022">
     <meta property="og:image:width" content="1200">
@@ -38,8 +34,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="sciencetimes.github.io">
     <meta property="twitter:url" content="https://valengo137.github.io/valengo137/">
-    <meta name="twitter:title" content="The Science Times Issue">
-    <meta name="twitter:description" content="The Science Times homepage">
+    <meta name="twitter:title" content="Val's Hut, Homepage">
+    <meta name="twitter:description" content="Val's Hut, homepage">
     <meta name="twitter:image" content="https://valengo137.github.io/valengo137/logo.svg">
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
