--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="style.css">    
     <script src="sci.js"></script>
-    <link rel="icon" type="image/x-icon" href="/photos/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="photos/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <meta name="description" content="Val's Hut">
