made some updates
update transparent favicon + add styles.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Valery's Hut</title>
+    <title>Val's Hut</title>
     <meta name="Val's Hut" content="Valery's Coding Hut to showcase their stuff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="style.css">    
@@ -42,13 +42,9 @@
 
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <header><!--add BODY THEN ADD NAV-->
+    <header>
         <a href="index.html">
-            <!-- should be replaced with a .svg file with a clear background instead -->
-            <img src="logo.svg" alt="The Science Times logo" class="logo"></img>
+            <img src="photos/logo.svg" alt="Val's Hut logo" class="logo"></img>
         </a>
         <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
