update header, body
update header + add outline for body

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Val's Hut</title>
     <meta name="Val's Hut" content="Valery's Coding Hut to showcase their stuff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="styles.css">    
     <script src="sci.js"></script>
     <link rel="icon" type="image/x-icon" href="photos/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -34,7 +34,7 @@
     <meta property="twitter:url" content="https://valengo137.github.io/valengo137/">
     <meta name="twitter:title" content="Val's Hut, Homepage">
     <meta name="twitter:description" content="Val's Hut, homepage">
-    <meta name="twitter:image" content="https://valengo137.github.io/valengo137/logo.svg">
+    <meta name="twitter:image" content="https://valengo137.github.io/valengo137/photos/logo.svg">
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 </head> <!-- Google tag (gtag.js) -->
@@ -46,28 +46,41 @@
         <a href="index.html">
             <img src="photos/logo.svg" alt="Val's Hut logo" class="logo"></img>
         </a>
-        <div class="topnav" id="myTopnav">
-            <a href="index.html">Home</a>
-            <a href="biology.html">Biology</a>
-            <a href="physics.html">Physics</a>
-            <a href="chemistry.html">Chemistry</a>
-            <a href="math.html">Math</a>
-            <a href="tech.html">Tech</a>
-            <a href="others.html">Others</a>
-            <a href="issues.html">Issues</a>
-            <a href="fun.html">Fun</a>
-            <a href="about.html">About</a>
+        <div class="nav" id="myTopnav">
+            <a href="#Intro">Intro</a>
+            <a href="#Coding">Coding</a>
+            <a href="#Choir">Choir</a>
+            <a href="Tarot">Tarot</a>
+            <a href="#Volunteer">Volunteer</a>
+            <a href="#Contact">Contact</a> 
             <!-- CHECK FILE PATH BEFORE LOCKING IN -->
         </div>
     </header>
     <main>
         <body>
-            <section>
-
+            <section id="Intro" class="intro">
+                <h3>
+                    
+                </h3>
             </section>
+            <section class="coding" id="Coding">
+                <h3>
 
-            <section>
+                </h3>
+            </section>
+            <section class="choir" id="Choir">
+                <h3>
 
+                </h3>
+            </section>
+            <section class="tarot" id="Tarot">
+                <h3></h3>
+            </section>
+            <section class="volunteer" id="Volunteer">
+                <h3></h3>
+            </section>
+            <section class="contact" id="Contact">
+                <h3></h3>
             </section>
         </body>
     </main>
