--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                 <div class="coding_content">
                     <div></div>
                 </div>
+                <div class="custom-shape-divider-bottom-1728925430">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                        <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+                    </svg>
+                </div>                
             </section>
             <section class="choir" id="Choir">
                 <h3>
