update update update

--- a/index.html
+++ b/index.html
@@ -58,61 +58,113 @@
         </div>
     </header>
     <main>
-            <section id="Intro" class="intro">
-                <div id="intro_back">
-                </div>
-                <div class="intro_content">
-                    <div class="intro_content_left">
-                        <h3 id="title">MAIN QUESTS</h3>
-                        <ul class="list_achieve">
-                            <li><a href="#Coding">Coding for Life</a></li>
-                            <li><a href="#Choir">Singing to Souls</a></li>
+        <section id="Intro" class="intro">
+            <div id="intro_back">
+            </div>
+            <div class="intro_content">
+                <div class="intro_content_left">
+                    <h3 id="title">MAIN QUESTS</h3>
+                    <ul class="list_achieve">
+                        <li><a href="#Coding">Coding for Life</a></li>
+                        <li><a href="#Choir">Singing to Souls</a></li>
                         </ol>
                         <p></p>
-                    </div>
-                    <img src="photos/logo.svg" alt="Val's Hut, Logo" />
-
-                    <div class="intro_content_right">
-                        <h3 id="title">
-                            SIDE QUESTS
-                        </h3>
-                        <ul class="list_achieve">
-                            <li><a href="#Giving">Giving out Love</a></li>
-                            <li><a href="#Work">Working for Change</a></li>                        </ul>
-                        <p></p>
-                    </div>
-                    <div class="custom-shape-divider-bottom-1728925114">
-                        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-                        </svg>
-                    </div>
-                </div>  
-
-            </section>
-            <section class="coding" id="Coding">
-                <div class="coding_content">
-                    <div></div>
                 </div>
-                <div class="custom-shape-divider-bottom-1728925430">
-                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                        <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
-                    </svg>
-                </div>                
-            </section>
-            <section class="choir" id="Choir">
-                <h3>
+                <img src="photos/logo.svg" alt="Val's Hut, Logo" />
 
-                </h3>
-            </section>
-            <section class="tarot" id="Tarot">
-                <h3></h3>
-            </section>
-            <section class="volunteer" id="Volunteer">
-                <h3></h3>
-            </section>
-            <section class="contact" id="Contact">
-                <h3></h3>
-            </section>
+                <div class="intro_content_right">
+                    <h3 id="title">
+                        SIDE QUESTS
+                    </h3>
+                    <ul class="list_achieve">
+                        <li><a href="#Giving">Giving out Love</a></li>
+                        <li><a href="#Work">Working for Change</a></li>
+                    </ul>
+                    <p></p>
+                </div>
+                <div class="custom-shape-divider-bottom-1728925114">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                        preserveAspectRatio="none">
+                        <path
+                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                            class="shape-fill"></path>
+                    </svg>
+                </div>
+            </div>
+
+        </section>
+        <section class="coding" id="Coding">
+            <div class="coding_content">
+                <div class="coding_top">
+                    <h3 class="title">Coding Projects</h3>
+                </div>
+                <div class="level">
+                    <div class="coding_left">
+                        <!-- provide buttons with anchors to projects -->
+                        <button id="ScienceTimes"><a href="https://thesciencetimes.github.io/thesciencetimes/">
+                                <img src="https://thesciencetimes.github.io/thesciencetimes/logo.svg"
+                                    alt="The Science Times, logo">
+                            </a></button>
+                        <button id="CollegeSearch"><a
+                                href="https://docs.google.com/presentation/d/1HKBKoeQ6_kgENpAJAAs1vJiJHt224_kyuwpdlpXIykM/edit?usp=sharing">
+                                <img src="photos/coding/college.png"></a></button>
+                    </div>
+                    <div class="coding_right">
+                        <ul>
+                            <li><a href="https://thesciencetimes.github.io/thesciencetimes/">Science Times
+                                    Website</a>, <i>Head Web Designer</i> since 2023. Hosts the website and assists
+                                another designer.</li>
+                            <li><a
+                                    href="https://docs.google.com/presentation/d/1HKBKoeQ6_kgENpAJAAs1vJiJHt224_kyuwpdlpXIykM/edit?usp=sharing">College
+                                    Search</a>, <i>leader</i> of a Team of 5. Won a <i>Silver Medal</i> at WICO 2024.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="choir" id="Choir">
+            <div class="custom-shape-divider-top-1728968974">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
+                    <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill">
+                    </path>
+                </svg>
+            </div>
+            <!-- CHOIR CONTENT -->
+            <div class="choir_content">
+                <div class="choir_title">
+                    <!-- https://css-tricks.com/snippets/svg/curved-text-along-path/ - learnt here. --> 
+                    <span class="just_title">
+                        <span class="char1">C</span>
+                        <span class="char2">H</span>
+                        <span class="char3">0</span>
+                        <span class="char4">I</span>
+                        <span class="char5">R</span>
+                        <span class="char6"></span>                       
+                    </span>
+                    
+                </div>
+            </div>
+
+
+            <div class="custom-shape-divider-bottom-1728969816">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
+                    <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill">
+                    </path>
+                </svg>
+            </div>
+        </section>
+        <section class="giving" id="Giving">
+            <h3></h3>
+        </section>
+        <section class="work" id="Work">
+            <h3></h3>
+        </section>
+        <section class="contact" id="Contact">
+            <h3></h3>
+        </section>
     </main>
     <footer>
     </footer>
