update dimensions and tracking

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TKRQ52QB');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Val's Hut</title>
@@ -43,6 +54,10 @@
 
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKRQ52QB" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header id="header">
         <a href="index.html">
             <img src="photos/logo.svg" alt="Val's Hut logo" class="logo"></img>
@@ -134,16 +149,23 @@
             <!-- CHOIR CONTENT -->
             <div class="choir_content">
                 <div class="choir_title">
-                    <!-- https://css-tricks.com/snippets/svg/curved-text-along-path/ - learnt here. --> 
+                    <!-- https://css-tricks.com/snippets/svg/curved-text-along-path/ - learnt here. -->
                     <span class="just_title">
                         <span class="char1">C</span>
                         <span class="char2">H</span>
                         <span class="char3">0</span>
                         <span class="char4">I</span>
                         <span class="char5">R</span>
-                        <span class="char6"></span>                       
                     </span>
-                    
+
+                </div>
+                <div class="choir_text">
+                    <div class="actualtext">
+                        <h3>Life recently in Choir...</h3>
+                    </div>
+                    <div class="choir_pic">
+                        <img src="photos/choir_image.png" alt="">
+                    </div>
                 </div>
             </div>
 
