--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WXMW9K4DX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEKZ7WLGC7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-3WXMW9K4DX');
+        gtag('config', 'G-VEKZ7WLGC7');
     </script>
-
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Val's Hut</title>
@@ -54,7 +52,7 @@
 
 
 <body>
-        <header id="header">
+    <header id="header">
         <a href="index.html">
             <img src="photos/logo.svg" alt="Val's Hut logo" class="logo"></img>
         </a>
