--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
         gtag('config', 'G-VEKZ7WLGC7');
     </script>
-    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Val's Hut</title>
     <meta name="Val's Hut" content="Valery's Coding Hut to showcase their stuff">
@@ -47,7 +46,7 @@
     <meta name="twitter:image" content="https://valengo137.github.io/valengo137/photos/logo.svg">
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-</head> <!-- Google tag (gtag.js) -->
+</head>
 
 
 
