--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEKZ7WLGC7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-VEKZ7WLGC7');
     </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Val's Hut</title>
@@ -46,8 +39,14 @@
     <meta name="twitter:image" content="https://valengo137.github.io/valengo137/photos/logo.svg">
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-</head>
+</head> <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VEKZ7WLGC7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-VEKZ7WLGC7');
 
 
 <body>
