add a ton of things

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
     <meta name="twitter:image" content="https://valengo137.github.io/valengo137/photos/logo.svg">
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-</head> <!-- Google tag (gtag.js) -->
+</head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEKZ7WLGC7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-        gtag('config', 'G-VEKZ7WLGC7');
+    gtag('config', 'G-VEKZ7WLGC7');
 </script>
 
 <body>
@@ -153,7 +154,19 @@
                 </div>
                 <div class="choir_text">
                     <div class="actualtext">
-                        <h3>Life recently in Choir...</h3>
+                        <ul>
+                            <h3>THE HIGHLIGHTS</h3>
+                            <li>Won <b>Gold 2nd as Eagles Choir</b> in
+                                <a class="choir_link"
+                                    href="https://drive.google.com/drive/folders/1_Yh-ClgyyuQOlzGzjWBYBjG5Np4nrP8g">WorldStrides
+                                    Heritage Hawaii Music Festival 2024</a>
+                            </li>
+                            <li>Composed my <b>first</b> music piece
+                                <a class="choir_link" href="">'Caterpillar'</a>, 2024
+                            </li>
+                            <li>Fundraised at the Music and Coffee Day</li>
+                            <li>Now getting ready for </li>
+                        </ul>
                     </div>
                     <div class="choir_pic">
                         <img src="photos/choir_image.png" alt="">
