a lot of things.

--- a/index.html
+++ b/index.html
@@ -159,13 +159,15 @@
                             <li>Won <b>Gold 2nd as Eagles Choir</b> in
                                 <a class="choir_link"
                                     href="https://drive.google.com/drive/folders/1_Yh-ClgyyuQOlzGzjWBYBjG5Np4nrP8g">WorldStrides
-                                    Heritage Hawaii Music Festival 2024</a>
+                                    Heritage Hawaii Music Festival 2024</a> 🏆
                             </li>
                             <li>Composed my <b>first</b> music piece
-                                <a class="choir_link" href="">'Caterpillar'</a>, 2024
+                                <a class="choir_link"
+                                    href="https://drive.google.com/file/d/1eYlRPUcJM88wJy47EJ2hvwBAHyV8RcHl/view?usp=drive_link">'Caterpillar,'</a>
+                                2024 🐛
                             </li>
-                            <li>Fundraised at the Music and Coffee Day</li>
-                            <li>Now getting ready for </li>
+                            <li>Sang with the <b>U.S. Marine Corps Forces Pacific Band</b> 🫡</li>
+                            <li>Upcoming: <b>Verteran's Day Performance</b> 🪖</li>
                         </ul>
                     </div>
                     <div class="choir_pic">
@@ -182,9 +184,43 @@
                     </path>
                 </svg>
             </div>
+            <!-- in need of the right curve -->
         </section>
         <section class="giving" id="Giving">
-            <h3></h3>
+            <span class="giving_title">
+                <span class="char1">G</span>
+                <span class="char2">I</span>
+                <span class="char3">V</span>
+                <span class="char4">I</span>
+                <span class="char5">N</span>
+                <span class="char6">G</span>
+            </span>
+            <div class="giving_content">
+                <!-- <div class="giving_left"> -->
+                <!-- provide buttons with anchors to projects -->
+                <!-- <button id="ScienceTimes">
+                        <a href="https://thesciencetimes.github.io/thesciencetimes/">
+                            <img src="photos/veteran.jpg" alt="The Science Times, logo">
+                        </a></button>
+                    <div id="CollegeSearch">
+                        <a href="">
+                            <img src="photos/volunteer2.jpg"></a>
+                    </div>
+                </div>
+                <div class="giving_right">
+                    <ul>
+                        <h3 id='giving_recent'>Lately...</h3>
+                        <li><a href="https://thesciencetimes.github.io/thesciencetimes/">Science Times
+                                Website</a>, <i>Head Web Designer</i> since 2023. Hosts the website and assists
+                            another designer.</li>
+                        <li><a
+                                href="https://docs.google.com/presentation/d/1HKBKoeQ6_kgENpAJAAs1vJiJHt224_kyuwpdlpXIykM/edit?usp=sharing">College
+                                Search</a>, <i>leader</i> of a Team of 5. Won a <i>Silver Medal</i> at WICO 2024.
+                        </li>
+                    </ul>
+                </div> -->
+                <!-- LOOK THROUGH PREVIOUS CODE FOR CODING_lEFT -->
+            </div>
         </section>
         <section class="work" id="Work">
             <h3></h3>
