--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
+    <script type="text/javascript">
+        var _iub = _iub || [];
+        _iub.csConfiguration = { "siteId": 3821626, "cookiePolicyId": 98115033, "lang": "en", "storage": { "useSiteId": true } };
     </script>
+    <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3821626.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+    <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3821626.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Val's Hut</title>
     <meta name="Val's Hut" content="Valery's Coding Hut to showcase their stuff">
@@ -229,6 +238,18 @@
             <h3></h3>
         </section>
     </main>
+    <div class="policy">
+        <a href="https://www.iubenda.com/privacy-policy/98115033/cookie-policy"
+            class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie
+            Policy</a>
+        <script
+            type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
+        <a href="https://www.iubenda.com/privacy-policy/98115033"
+            class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
+            Policy</a>
+        <script
+            type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
+    </div>
     <footer>
     </footer>
 </body>
