--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
+    <!-- iubenda -->
     <script type="text/javascript">
         var _iub = _iub || [];
         _iub.csConfiguration = { "siteId": 3821626, "cookiePolicyId": 98115033, "lang": "en", "storage": { "useSiteId": true } };
     </script>
+    <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3821626.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+    <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
     <script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3821626.js"></script>
     <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
     <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
@@ -241,11 +245,6 @@
     <div class="policy">
         <a href="https://www.iubenda.com/privacy-policy/98115033/cookie-policy"
             class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie
-            Policy</a>
-        <script
-            type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
-        <a href="https://www.iubenda.com/privacy-policy/98115033"
-            class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
             Policy</a>
         <script
             type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
