lock in changes to the "giving" section
lock in changes to the "giving" section, added new content, changed the format, finished.

--- a/index.html
+++ b/index.html
@@ -209,30 +209,26 @@
                 <span class="char6">G</span>
             </span>
             <div class="giving_content">
-                <!-- <div class="giving_left"> -->
-                <!-- provide buttons with anchors to projects -->
-                <!-- <button id="ScienceTimes">
-                        <a href="https://thesciencetimes.github.io/thesciencetimes/">
-                            <img src="photos/veteran.jpg" alt="The Science Times, logo">
-                        </a></button>
-                    <div id="CollegeSearch">
-                        <a href="">
-                            <img src="photos/volunteer2.jpg"></a>
+                <div class="giving_left">
+                    <!-- provide buttons with anchors to projects -->
+                    <div id="veteran">
+                        <img src="photos/veteran.jpg" alt="Two people giving checks to Veterans">
+                    </div>
+                    <div id="volunteer2">
+                        <img src="photos/volunteer2.jpg" alt="3 people from Hanoi with a H'mong kid hanging out"></a>
                     </div>
                 </div>
                 <div class="giving_right">
                     <ul>
                         <h3 id='giving_recent'>Lately...</h3>
-                        <li><a href="https://thesciencetimes.github.io/thesciencetimes/">Science Times
-                                Website</a>, <i>Head Web Designer</i> since 2023. Hosts the website and assists
-                            another designer.</li>
-                        <li><a
-                                href="https://docs.google.com/presentation/d/1HKBKoeQ6_kgENpAJAAs1vJiJHt224_kyuwpdlpXIykM/edit?usp=sharing">College
-                                Search</a>, <i>leader</i> of a Team of 5. Won a <i>Silver Medal</i> at WICO 2024.
+                        <li>Giving out checks to veterans in Loc Chau, Bao Loc and learning about their war stories over
+                            tea. </li>
+                        <li>Meeting the H'mong Community in Son La, learning their languages, playing classic games with
+                            the kids there, and giving them gifts at the end.
                         </li>
                     </ul>
-                </div> -->
-                <!-- LOOK THROUGH PREVIOUS CODE FOR CODING_lEFT -->
+                </div>
+                <!-- LOOK THROUGH PREVIOUS CODE FOR CODING_lEFT-->
             </div>
         </section>
         <section class="work" id="Work">
